no more getfirst getlast please please please